# ytdownloaderpip

./: .gitignore  README.md  pyproject.toml
src/ytdownloaderpip/: downloader.py  ffmpeg_setup.py  main.py  progress_bar.py
